--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-three/drei": "^9.121.3",
-    "@react-three/fiber": "^9.0.0-rc.5",
+    "@react-three/fiber": "^8.2.2",
     "@types/three": "^0.172.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion-3d": "^12.0.3",
+    "framer-motion-3d": "^12.4.7",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
     "lenis": "^1.1.20",
@@ -28,8 +28,8 @@
     "motion": "^12.0.1",
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-type-animation": "^3.2.0",
