--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@react-three/drei": "^9.121.3",
-    "@react-three/fiber": "^8.2.2",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@types/three": "^0.172.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion-3d": "^12.4.7",
+    "framer-motion-3d": "^11.2.0",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
     "lenis": "^1.1.20",
@@ -36,13 +36,14 @@
     "react-use": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.172.0",
+    "three": "^0.158.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
