--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/three": "^0.172.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^10.0.0",
     "framer-motion-3d": "^11.2.0",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
@@ -37,6 +38,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.158.0",
+    "three-mesh-bvh": "^0.7.8",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
