--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://youkatann.github.io/status-deploy",
   "name": "status-app",
   "version": "0.1.0",
   "private": true,
@@ -6,7 +7,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -16,18 +19,17 @@
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.2.2",
+    "@react-three/fiber": "8.2.2",
     "@types/three": "^0.172.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.7",
-    "framer-motion-3d": "^11.2.0",
+    "framer-motion-3d": "^12.4.7",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
     "lenis": "^1.1.20",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.1",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,20 +39,22 @@
     "react-use": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.173.0",
+    "three": "^0.172.0",
+    "three-mesh-bvh": "^0.8.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3.0.0",
+    "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.1.6",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.0.0"
   }
 }
