--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -18,28 +18,29 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "8.2.2",
+    "@react-three/drei": "^9.112.1",
+    "@react-three/fiber": "^8.2.2",
+    "@react-three/postprocessing": "^2.19.1",
     "@types/three": "^0.172.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "framer-motion-3d": "^12.4.7",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
     "lenis": "^1.1.20",
     "lucide-react": "^0.473.0",
-    "motion": "^12.0.1",
-    "next": "^15.1.6",
+    "next": "^14.0.0",
     "nodemailer": "^6.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-type-animation": "^3.2.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.172.0",
+    "three": "^0.159.0",
     "three-mesh-bvh": "^0.8.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
