--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
+    ".next/types/**/*.ts", "next.config.js",
   ],
   "exclude": [
     "node_modules"
